--- a/Style.css
+++ b/Style.css
@@ -143,6 +143,6 @@ Apellidos {
 Jueces Nombres:before{
     content: "Nombre: ";
 }
-Juecess Apellidos:before{
+Jueces Apellidos:before{
     content: "Apellido: ";
 }
