--- a/Style.css
+++ b/Style.css
@@ -1,9 +1,108 @@
+html{
+    background-color: rgb(164, 196, 164);
+}
+/* LOADER */
+.loader {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    transition: all 0.15s;
+    position: fixed;
+    z-index: 9999;
+    background: rgb(164, 196, 164);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    background-attachment: fixed;
+    font-family: 'Raleway'Arial,
+        sans-serif;
+}
+.title {
+    position: absolute;
+    top: 220px;
+    bottom: 0;
+    right: 0;
+    left: 0;
+    text-align: center;
+    text-transform: uppercase;
+    font-family: 'Raleway', Arial, sans-serif;
+    color: #656666;
+}
+@-webkit-keyframes rotate {
+    to {
+        transform: rotate(360deg);
+    }
+}
+@keyframes rotate {
+    to {
+        transform: rotate(360deg);
+    }
+}
+.loading {
+    width: 100px;
+    height: 100px;
+}
+.loading__ring {
+    position: absolute;
+    width: 100px;
+    height: 100px;
+}
+.loading__ring:first-child {
+    transform: skew(30deg, 20deg);
+}
+.loading__ring:last-child {
+    transform: skew(-30deg, -20deg) scale(-1, 1);
+}
+.loading__ring:last-child svg {
+    -webkit-animation-delay: -0.5s;
+    animation-delay: -0.5s;
+}
+.loading__ring svg {
+    -webkit-animation: rotate 1s linear infinite;
+    animation: rotate 1s linear infinite;
+    fill: rgba(0, 0, 0, 0.2);
+}
+
+/* BOTON */
+.button {
+    display: inline-block;
+    padding: 15px 25px;
+    font-size: 24px;
+    cursor: pointer;
+    text-align: center;
+    text-decoration: none;
+    outline: none;
+    color: #fff;
+    background-color: #656666;
+    border: none;
+    border-radius: 15px;
+    box-shadow: 0 9px #999;
+    position: relative;
+    top: 300px;
+    left: 560px;
+}
+.button:hover {
+    background-color: #292929
+}
+.button:active {
+    background-color: #292929;
+    box-shadow: 0 5px #666;
+    transform: translateY(4px);
+}
+
+/* XML */
+Karate {
+    background-color: rgb(164, 196, 164);
+}
 Aspirante {
     display: table;
     margin: 15px;
 }
 Aspirante:before{
     content: "Datos Aspirante: ";
+    background-color: white;
     display: block;
     border: black 1px solid;
     display: table-cell;
@@ -78,6 +177,7 @@ Meritos:before{
     border: black 1px solid;
     display: table-cell;
     padding: 6px;
+    background-color: white;
 }
 Meritos Id_Aspirante, 
 Edad_Aspirante,
@@ -88,7 +188,7 @@ TrabajoEscrito {
     position: relative;
     display: table-cell;
     padding: 6px;
-    background-color: yellowgreen;
+    background-color: rgb(111, 112, 182);
 }
 Meritos Id_Aspirante:before{
     content: "ID: ";
@@ -112,6 +212,7 @@ Tribunal:before{
     border: black 1px solid;
     display: table-cell;
     padding: 6px;
+    background-color: white;
 }
 Num_Jueces,
 Calificacion_final{
@@ -134,6 +235,7 @@ Tribunal Jueces:before{
     padding: 6px;
     display: table;
     margin: 15px;
+    background-color: white;
 }
 Nombres,
 Apellidos, 
@@ -175,6 +277,7 @@ CinturonNegro1DAN:before {
     border: black 1px solid;
     display: table-cell;
     padding: 6px;
+    background-color: white;
 }
 TecnicaDefensa,
 TecnicaPierna,
@@ -230,12 +333,13 @@ Resultados:before {
     border: black 1px solid;
     display: table-cell;
     padding: 6px;
+    background-color: white;
 }
 ApruebaExamen {
     border: black 1px solid;
     display: list-item;
     padding: 6px;
-    background-color: green;
+    background-color: rgb(57, 185, 57);
     width: 180px;
     list-style: none;
 }
