--- a/Style.css
+++ b/Style.css
@@ -28,7 +28,7 @@ html{
     text-align: center;
     text-transform: uppercase;
     font-family: 'Raleway', Arial, sans-serif;
-    color: #b8b9b9;
+    color: #d8d8d8;
 }
 @-webkit-keyframes rotate {
     to {
