--- a/Style.css
+++ b/Style.css
@@ -80,8 +80,10 @@ html{
     border-radius: 15px;
     box-shadow: 0 9px #999;
     position: relative;
-    top: 300px;
-    left: 560px;
+    top: 220px;
+    bottom: 0;
+    right: 0;
+    left: 0;
 }
 .button:hover {
     background-color: #292929
