--- a/Style.css
+++ b/Style.css
@@ -79,11 +79,13 @@ html{
     border: none;
     border-radius: 15px;
     box-shadow: 0 9px #999;
-    position: relative;
+    position: absolute;
     top: 220px;
     bottom: 0;
     right: 0;
     left: 0;
+    align-items: center;
+    justify-content: center;
 }
 .button:hover {
     background-color: #292929
