--- a/Style.css
+++ b/Style.css
@@ -80,10 +80,10 @@ html{
     border-radius: 15px;
     box-shadow: 0 9px #999;
     position: block;
-    margin-top: 20%;
+    margin-top: 400px;
     margin-bottom: 0;
     margin-right: 0;
-    margin-left: 42%;
+    margin-left: 800px;
 }
 .button:hover {
     background-color: #292929
